log/build_2021-11-30_17-01-06/py_pubsub/stderr.log
  File "/home/sheldon/turtlebot3_ws/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/publisher_member_function.py", line 2
    form rclpy.node import Node
         ^
SyntaxError: invalid syntax

